trail/deploy/IdentityAPI/identity-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-api
  namespace: eshop
  labels:
    app: identity-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-api
  template:
    metadata:
      labels:
        app: identity-api
    spec:
      containers:
      - name: identity-api
        image: al/identity-api:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        livenessProbe:
            httpGet:
              path: /liveness
              port: 80
              scheme: HTTP
            initialDelaySeconds: 90
            timeoutSeconds: 15
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /hc
            port: 80
            scheme: HTTP
          initialDelaySeconds: 90
          timeoutSeconds: 15
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts: 
        - name: identity-api
          mountPath: /app/Files
      volumes:
      - name: identity-api
        persistentVolumeClaim:
          claimName: identity-api

---

apiVersion: v1
kind: Service
metadata:
  name: identity-api
  namespace: eshop
spec:
 type: LoadBalancer
 ports:
 - port: 80
 selector:
   app: identity-api

---
